syntax = "proto3";

package ip;

option go_package = "./proto;ip";

service Ip {
	rpc Lookup(LookupRequest) returns (LookupResponse) {}
}

// Lookup the geolocation information for an IP address
message LookupRequest {
	// IP to lookup
	string ip = 1;
}

message LookupResponse {
	// IP of the query
	string ip = 1;
	// Autonomous system number
	int32 asn = 2;
	// Name of the city
	string city = 3;
	// Name of the country
	string country = 4;
	// Name of the continent
	string continent = 5;
	// Latitude e.g 52.523219
	double latitude = 6;
	// Longitude e.g 13.428555
	double longitude = 7;
	// Timezone e.g Europe/Rome
	string timezone = 8;
}

